fix: some unreadable background and color combinations

--- a/_includes/styles/elements.scss
+++ b/_includes/styles/elements.scss
@@ -80,13 +80,16 @@ li code, p code {
 }
 
 .cc-helper__altbutton {
-  color: var(--color-neptune);
-  background-color: transparent;
-  border: solid 2px var(--color-neptune);
+  color: var(--search-icon-fill);
+  background: var(--background);
+  border: 2px solid var(--button-border);
+
+  svg {
+    fill: var(--search-icon-fill);
+  }
 
   &:hover {
-    border-color: var(--color-neptune-double);
-    color: var(--color-neptune-double);
+    background-color: var(--button-hover);
   }
 }
 
