--- a/_includes/styles/search.scss
+++ b/_includes/styles/search.scss
@@ -105,14 +105,9 @@
     justify-content: center;
     align-items: center;
     margin-top: 16px;
-    background-color: var(--background);
 
     @media (max-width: 800px) {
       display: flex;
-    }
-
-    & svg {
-      fill: var(--color-neptune);
     }
   }
 }
